--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 fpdf==1.7.2
 inquirerpy==0.3.4
+markdown-it-py==3.0.0
+mdurl==0.1.2
 pfzy==0.3.4
 prompt-toolkit==3.0.41
+Pygments==2.17.2
+rich==13.7.0
 tinydb==4.8.0
 wcwidth==0.2.12
